--- a/index.html
+++ b/index.html
@@ -185,16 +185,26 @@
 	
 	
 	
-	
-	
-	
-	
-	
-	
+
 	
 	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	
+	
+	
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5CNLVBHKN6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5CNLVBHKN6');
+</script>
+	
+	
+	
 	
 </body>
 </html>
